--- a/SharpWnfSuite/SharpWnfScan/SharpWnfScan.csproj
+++ b/SharpWnfSuite/SharpWnfScan/SharpWnfScan.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>SharpWnfScan</RootNamespace>
     <AssemblyName>SharpWnfScan</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
@@ -62,6 +62,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SharpWnfDump\SharpWnfDump.csproj">
+      <Project>{b5821f63-bd3b-45b9-8cd6-e244065ada32}</Project>
+      <Name>SharpWnfDump</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
